increase jvm memory size